# open_ra2ob_qt6

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.json  configmanager.cpp  configmanager.h  datafetch.cpp  datafetch.h  globalsetting.cpp  globalsetting.h  hotkeymanager.cpp  hotkeymanager.h  layoutsetting.h  logo.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.h  notes.md  ob.cpp  ob.h  ob.ui  open_ra2ob_qt6.exe.manifest  open_ra2ob_qt6_zh_CN.ts  playerinfo.cpp  playerinfo.h  playerinfo.ui  producingblock.cpp  producingblock.h  producingblock.ui  qoutlinelabel.cpp  qoutlinelabel.h  ra2.cpp  ra2.h  ra2ob.cpp  ra2ob.h  ra2ob.hpp  (+6 more)
Ra2ob/src/: Constants.hpp  Datatypes.hpp  Game.hpp  Viewer.hpp
config/: config.json  full_offsets.json  panel_offsets.json  unit_offsets.json  view.json
